tests/crates/compilation_error/src/lib.rs
pub fn foo() -> i32 {
    "this is not an i32"
}

